Cherry-pick 013ff9c5d616. rdar://problem/100412139

[Cocoa] Potential channel count mismatch in CARingBuffer FetchABL
    https://bugs.webkit.org/show_bug.cgi?id=246951
    rdar://100412139

    Reviewed by Youenn Fablet.

    In the case of a mismatch between the AudioFormatList's mNumberBuffers and the ring buffer's
    m_pointers channel data, pick the minimum of the two to iterate over.

    * Source/WebCore/platform/audio/cocoa/CARingBuffer.cpp:
    (WebCore::FetchABL):

    Canonical link: https://commits.webkit.org/255924@main

Canonical link: https://commits.webkit.org/252432.793@safari-7614-branch